argocd/platform/messaging/stalwart/resources/mail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-mail
  namespace: stalwart
  annotations:
    lbipam.cilium.io/ips: "192.168.110.240"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: stalwart
  ports:
    - name: smtp
      port: 25
      targetPort: smtp
    - name: smtps
      port: 465
      targetPort: smtps
    - name: submission
      port: 587
      targetPort: submission
    - name: imaps
      port: 993
      targetPort: imaps
